fix(CompanyPopup): fixes the Close button being cut off in French

--- a/src/components/CompanyPopup/Company/styles.scss
+++ b/src/components/CompanyPopup/Company/styles.scss
@@ -51,8 +51,6 @@
     right: -12px;
     bottom: 0;
 
-    width: 80px;
-
     font-size: 18px;
   }
 }
